--- a/css/components/icons.css
+++ b/css/components/icons.css
@@ -1,1 +1,79 @@
+.cabecalho-logo {
+    width: 150px;
+    height: 70px;
 
+    position: absolute;
+    left: 20px;
+}
+
+.rodape-logo {
+    width: 180px;
+    height: 90px;
+    padding: 5px;
+}
+
+.fa-linkedin-in,
+.fa-github,
+.fa-file-arrow-down{
+    color: var(--cor-branca);
+    font-size: 35px;
+    transition: all 500ms;
+}
+
+.fa-linkedin-in:hover,
+.fa-github:hover,
+.fa-file-arrow-down:hover {
+    color: var(--cor-azul);
+}
+
+.fa-file,
+.fa-code {
+    color: var(--cor-preta);
+    font-size: 20px;
+}
+
+.fa-html5,
+.fa-css3-alt,
+.fa-js,
+.fa-java,
+.fa-database {
+    font-size: 33px;
+    color: var(--cor-branca);
+}
+
+.fa-html5 {
+    color: rgba(229, 76, 33, 0.8);
+}
+
+.fa-css3-alt {
+    color: rgba(38, 77, 228, 0.8);
+    ;
+}
+
+.fa-js {
+    color: rgba(247, 223, 30, 0.8);
+}
+
+.fa-java {
+    color: rgba(13, 113, 168, 0.8);
+}
+
+.fa-database {
+    color: rgba(180, 180, 180, 0.8);
+}
+
+.fa-circle {
+    font-size: 12px;
+    color: var(--cor-preta);
+    border-radius: 50%;
+}
+
+.fa-award {
+    font-size: 18px;
+    padding-right: 10px;
+}
+
+.fa-graduation-cap {
+    font-size: 18px;
+    padding-right: 10px;
+}
